@startuml
skinparam style strictuml
hide empty members
title DM-US103

package "Aircraft Aggregate" {
    class Aircraft <<Entity>> <<Root>> {
        - version : Long
        - manufacturingDate : LocalDate
        - actualSeatingCapacity : Integer
    }
    class RegistrationNumber <<Value Object>> {
        - number : String
    }
    enum AircraftStatus <<Enum>> {
        ACTIVE
        INACTIVE
        UNDER_MAINTENANCE
    }
}

package "Aircraft Model Aggregate" {
    class AircraftModel <<Entity>> <<Root>> {
        - modelPhotoUrl : String
    }
    class ModelName <<Value Object>> {
        - name : String
    }
}

Aircraft *-- "1" RegistrationNumber : identified by >
Aircraft *-- "1" AircraftStatus : current state >
Aircraft "*" --> "1" AircraftModel : includes details of >
AircraftModel *-- "1" ModelName : identified by >

@enduml